--- a/taskvenue/public/index.html
+++ b/taskvenue/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicontv.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="2ezgijs8C3Th7Supn4mug_AMVoHaSlH2S6iuxQSDIIA" />
     <meta
       name="description"
       content="Web site created using create-react-app"
