changed content in index html

--- a/taskvenue/public/index.html
+++ b/taskvenue/public/index.html
@@ -17,7 +17,7 @@
     <meta name="google-site-verification" content="J0hsPqyHW1cc4VnMbz_FIU94iO2BgNUDvN4aCcdy_JI" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Log in to the TaskVenue application"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <!--
