--- a/taskvenue/public/index.html
+++ b/taskvenue/public/index.html
@@ -19,7 +19,7 @@
       name="description"
       content="Log in to the TaskVenue application"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/faviconnew.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
